# paddleocr_vl_ov

./: .gitignore  README.md  build_wheel.py  gradio_server.py  modeling_paddleocr_vl.py  ov_model_convert.py  ov_nncf_compress.py  ov_nncf_quantization.py  ov_paddleocr_vl.py  ov_pipeline_test.py  paddleocr_vl_grdio.py  pyproject.toml  requirements.txt  test.py  torch_ov_test.py
client_app/: README.md  main.py  paddleocr_vl_client.spec  requirements.txt
client_app/paddleocr_vl_client/: __init__.py  i18n.py  main_window.py  markdown_preview.py  pdf_utils.py  screenshot_overlay.py  types.py  utils_qt.py  worker.py
model_convert/: README.md  image_processing_paddleocr_vl.py  ov_model_convert.py  ov_paddleocr_vl.py
paddleocr_vl/: ov_paddleocr_vl.py
paddleocr_vl_openvino/: __init__.py
paddleocr_vl_openvino/paddleocr_vl/: image_processing_paddleocr_vl.py  ov_paddleocr_vl.py  uilts.py
paddleocr_vl_openvino/paddleocr_vl_pipeline/: __init__.py  ov_paddleocr_vl_pipeline.py
paddleocr_vl_openvino/pp_doclayoutv2/: __init__.py  ov_pp_layoutv2_infer.py  processors.py  result.py  utils.py
paddleocr_vl_pipeline/: __init__.py  ov_paddleocr_vl_pipeline.py
